Windows. F10 should focus the menu bar and open the first menu, which
can be reversed via the ESCAPE. Consequently, the NVDA Screen Reader
will display the menu title on the Braille display properly ---
otherwise no action was indicated. Minor INCOMPATIBILITY with native
Windows GUI behaviour of F10, which FlatLaf attempted to imitate here.

* The jEdit action "goto-entity" has been superseded by "follow-link",
while retaining the keyboard shortcut CS+d. The new action is more
general: it uses the same notion of link as C-hover-click via mouse.
Minor INCOMPATIBILITY.

* Tooltip messages render formal entities with additional PIDE markup,
to distinguish multiple def-positions due to locale interpretations etc.

* Console/Scala: more robust Scala_Console.Progress with local output
and interrupt handling (using thread interrupt, e.g. via "Stop" button).
For example:

  val progress = new Scala_Console.Progress(verbose = true)
  Build.build_logic(PIDE.options, "FOL", progress = progress)


*** Isabelle/VSCode Prover IDE ***

* Support for hyperlinks from \<^doc>\<open>...\<close>, e.g. \<^doc>\<open>system\<close>.


*** HOL ***

* SMT:
  - Added option "cvc5_integer_induction" and
    "cvc5_structural_induction".

* Theory "HOL.Finite_Set"
  - Added lemmas.
      card_Domain_le
      card_le_card_if_mem_imp_ex_mem
      card_Range_le

* Constants "open" and "uniformity" are not handled as class parameters
any longer in generated code: there are hardly any instances with a
reasonable implementation, but a lot of implementations would require
these as (effectively unused) dictionary parameters.
Minor INCOMPATIBILITY.

* Constants "Inf", "Sup", "Lcd", "Gcd" are not handled as class parameters
any longer in generated code but implemented using their counterparts on finite
sets. Minor INCOMPATIBILITY.

* Set difference is now written using the symbol "\<setminus>" (which is not a
  backlash), although the former symbol "-" still works. Minor INCOMPATIBILITY.
