@@ -37,6 +37,13 @@ will display the menu title on the Braille display properly ---
 otherwise no action was indicated. Minor INCOMPATIBILITY with native
 Windows GUI behaviour of F10, which FlatLaf attempted to imitate here.
 
+* The jEdit actions "isabelle.reload-plain" and
+"isabelle.reload-symbols" provide convenient shortcuts to reload a
+buffer with the encodings "UTF-8" and "UTF-8-Isabelle", respectively.
+These actions also appear as menu items "File / Reload Plain Text" and
+"File / Reload Unicode Symbols". This helps to see the true text behind
+the superficial Unicode rendering, which is usually enabled by default.
+
 * The jEdit action "goto-entity" has been superseded by "follow-link",
 while retaining the keyboard shortcut CS+d. The new action is more
 general: it uses the same notion of link as C-hover-click via mouse.
